--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<title>HTML Academy: Техномарт</title>
@@ -116,10 +115,10 @@
 				<img class="product-photo" src="img/Perforator_0.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 9000</h3>
 				<span>32500 Р.</span>
-				<a href="#">25500 Р.</a>
+				<a class="price" href="#">25500 Р.</a>
 				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+					<a class="buy-link" href="#">Купить</a>
+					<a class="bookmarks-link" href="#">В закладки</a>
 				</div>
 			</article>
 			<!-- product item 2 -->
@@ -127,10 +126,10 @@
 				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 3000</h3>
 				<span>22500 P.</span>
-				<a href="#">15500 P.</a>
+				<a class="price" href="#">15500 P.</a>
 				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+					<a class="buy-link" href="#">Купить</a>
+					<a class="bookmarks-link" href="#">В закладки</a>
 				</div>
 			</article>
 			<!-- product item 3 -->
@@ -138,10 +137,10 @@
 				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 				<h3>Перфоратор BOSCH BFG 6000</h3>
 				<span>30500 P.</span>
-				<a href="#">25500 P.</a>
+				<a class="price" href="#">25500 P.</a>
 				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+					<a class="buy-link" href="#">Купить</a>
+					<a class="bookmarks-link" href="#">В закладки</a>
 				</div>
 			</article>
 			<!-- product item 4 -->
@@ -149,10 +148,10 @@
 				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 				<h3>Перфоратор BOSCH BFG 2000</h3>
 				<span></span>
-				<a href="#">12500 P.</a>
+				<a class="price" href="#">12500 P.</a>
 				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+					<a class="buy-link" href="#">Купить</a>
+					<a class="bookmarks-link" href="#">В закладки</a>
 				</div>
 			</article>
 		</section>
@@ -193,7 +192,7 @@
 		<!-- DELIVERY -->
 		<section class="delivery">
 			<div class="delivery-advantage">
-				<h2>Сервисы</h2>
+				<h2 class="services-title">Сервисы</h2>
 				<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 			</div>
 			<div class="delivery-container">
@@ -202,7 +201,7 @@
 					<li><a href="#">Гарантия</a></li>
 					<li><a href="#">Кредит</a></li>
 				</ul>
-				<h2>Доставка</h2>
+				<h2 class="delivery-title">Доставка</h2>
 				<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
 				<img src="img/delivery-truck.jpg" alt="">
 			</div>
@@ -221,7 +220,7 @@
 				<a class="btn about-company" href="#">Подробнее о компании</a>
 			</section>
 			<section class="contacts">
-				<h2>Контакты</h2>
+				<h2 class="contacts-title">Контакты</h2>
 				<p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
 				<img class="map-location" src="img/map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
 				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
@@ -233,9 +232,9 @@
 		<!-- footer top -->
 		<div class="footer-top">
 			<div class="footer-contact">
-				<a class="">Техномарт</a>
+				<a class="footer-logo">Техномарт</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
+					<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				</p>
 			</div>
 			<ul class="footer-navigation">
