--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header class="main-header">
 		<!-- top menu -->
 		<div class="main-header-top">
-			<a class="header-logo">Техномарт</a>
+			<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
 			<div class="search">
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
 					<button class="search-btn" type="submit" aria-label="Поиск по сайту"></button>
@@ -114,7 +114,7 @@
 			<article class="product-item">
 				<img class="product-photo" src="img/Perforator_0.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 9000</h3>
-				<span>32500 Р.</span>
+				<del>32500 Р.</del>
 				<a class="price" href="#">25500 Р.</a>
 				<div class="">
 					<a class="buy-link" href="#">Купить</a>
@@ -125,7 +125,7 @@
 			<article class="product-item">
 				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 3000</h3>
-				<span>22500 P.</span>
+				<del>22500 P.</del>
 				<a class="price" href="#">15500 P.</a>
 				<div class="">
 					<a class="buy-link" href="#">Купить</a>
@@ -136,7 +136,7 @@
 			<article class="product-item">
 				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 				<h3>Перфоратор BOSCH BFG 6000</h3>
-				<span>30500 P.</span>
+				<del>30500 P.</del>
 				<a class="price" href="#">25500 P.</a>
 				<div class="">
 					<a class="buy-link" href="#">Купить</a>
@@ -147,7 +147,7 @@
 			<article class="product-item">
 				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 				<h3>Перфоратор BOSCH BFG 2000</h3>
-				<span></span>
+				<del></del>
 				<a class="price" href="#">12500 P.</a>
 				<div class="">
 					<a class="buy-link" href="#">Купить</a>
@@ -232,7 +232,9 @@
 		<!-- footer top -->
 		<div class="footer-top">
 			<div class="footer-contact">
-				<a class="footer-logo">Техномарт</a>
+				<a class="footer-logo-link" href="index.html">
+					<img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
+				</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 					<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				</p>
