--- a/inner.html
+++ b/inner.html
@@ -13,7 +13,7 @@
 	<header class="main-header">
 		<!-- top menu -->
 		<div class="main-header-top">
-			<a class="header-logo" href="index.html">Техномарт</a>
+			<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
 			<div class="search">
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
 					<button class="search-btn" type="submit"></button>
@@ -137,7 +137,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<span>22500 р.</span>
+						<del>22500 р.</del>
 						<a class="price" href="#">15500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -148,7 +148,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<span>30500 р.</span>
+						<del>30500 р.</del>
 						<a class="price" href="#">25500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -159,7 +159,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<span></span>
+						<del></del>
 						<a class="price" href="#">12500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -170,7 +170,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<span>22500 р.</span>
+						<del>22500 р.</del>
 						<a class="price" href="#">15500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -181,7 +181,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<span>30500 р.</span>
+						<del>30500 р.</del>
 						<a class="price" href="#">25500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -192,7 +192,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<span></span>
+						<del></del>
 						<a class="price" href="#">12500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -203,7 +203,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<span>22500 р.</span>
+						<del>22500 р.</del>
 						<a class="price" href="#">15500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -214,7 +214,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<span>30500 р.</span>
+						<del>30500 р.</del>
 						<a class="price" href="#">25500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -225,7 +225,7 @@
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<span></span>
+						<del></del>
 						<a class="price" href="#">12500 р.</a>
 						<div class="">
 							<a class="buy-link" href="#">Купить</a>
@@ -251,7 +251,9 @@
 				<!-- footer top -->
 				<div class="footer-top">
 					<div class="footer-contact">
-						<a class="footer-logo" href="index.html">Техномарт</a>
+						<a class="footer-logo-link" href="index.html">
+							<img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
+						</a>
 						<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 							<a href="tel:+78125550555">+7 (812) 555-05-55</a>
 						</p>
