--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="container">
 				<nav class="main-navigation">
-					<ul class="site-navigation site-navigation-row">
+					<ul class="site-navigation">
 						<li><a href="index.html">Главная</a></li>
 						<li><a href="#">Компания</a></li>
 						<li><a href="inner.html">Каталог</a></li>
@@ -91,12 +91,12 @@
 				<div class="slider">
 					<ul class="slider-list">
 						<li class="slider-item">
-							<h2>Дрели</h2>
+							<h2 class="slider-title">Дрели</h2>
 							<span>Соседям на радость</span>
 							<a class="slide-link" href="#">Открыть каталог</a>
 						</li>
 						<li class="slider-item">
-							<h2>Перфоратор</h2>
+							<h2 class="slider-title">Перфоратор</h2>
 							<span>Настоящие мужские игрушки</span>
 							<a class="slide-link" href="#">Открыть каталог</a>
 						</li>
@@ -106,9 +106,9 @@
 							<button class="slider-prev" type="button" aria-label="Предыдущий слайд"></button>
 							<button class="slider-next" type="button" aria-label="Следующий слайд"></button>
 						</div>
-						<ul>
-							<li><button class="slider-dots" type="button"></button></li>
-							<li><button class="slider-dots" type="button"></button></li>
+						<ul class="slider-dots">
+							<li><button class="slider-dot" type="button"></button></li>
+							<li><button class="slider-dot" type="button"></button></li>
 						</ul>
 					</div>
 				</div>
