--- a/inner.html
+++ b/inner.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="container">
 			<nav class="main-navigation">
-				<ul class="site-navigation site-navigation-row">
+				<ul class="site-navigation">
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="#">Компания</a></li>
 					<li><a href="#">Каталог</a></li>
@@ -67,10 +67,10 @@
 		<!-- breakdcrumbs -->
 		<div class="container">
 		<ul class="breadcrumbs">
-			<li><a href="#"></a></li>
-			<li><a href="#">Каталог</a></li>
-			<li><a href="#">Инструмент</a></li>
-			<li class="breadcrumbs-current">Перфораторы</li>
+			<li class="breadcrumbs-item"><a href="#"></a></li>
+			<li class="breadcrumbs-item"><a href="#">Каталог</a></li>
+			<li class="breadcrumbs-item"><a href="#">Инструмент</a></li>
+			<li class="breadcrumbs-item breadcrumbs-current">Перфораторы</li>
 		</ul>
 		<h2 class="main-title">Перфораторы</h2>
 	</div>
@@ -251,10 +251,10 @@
 				</section>
 				<!--pagination list -->
 				<ul class="pagination-list">
-					<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
-					<li class="pagination-item"><a href="#">2</a></li>
-					<li class="pagination-item"><a href="#">3</a></li>
-					<li class="pagination-item"><a href="#">Следующая</a></li>
+					<li class="pagination-item pagination-item-current"><a class="pagination-link" href="#">1</a></li>
+					<li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
+					<li class="pagination-item"><a class="pagination-link" href="#">3</a></li>
+					<li class="pagination-item"><a class="pagination-link" href="#">Следующая</a></li>
 				</ul>
 			</div>
 		</div>
