--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 						<li class="slider-item">
 							<h2 class="slider-title">Дрели</h2>
 							<span>Соседям на радость</span>
-							<a class="slide-link" href="#">Открыть каталог</a>
+							<a class="slider-link" href="#">Открыть каталог</a>
 						</li>
 						<li class="slider-item">
 							<h2 class="slider-title">Перфоратор</h2>
 							<span>Настоящие мужские игрушки</span>
-							<a class="slide-link" href="#">Открыть каталог</a>
+							<a class="slider-link" href="#">Открыть каталог</a>
 						</li>
 					</ul>
 					<div class="slider-control">
