--- a/inner.html
+++ b/inner.html
@@ -148,7 +148,7 @@
 
 				<!-- PRODUCT LIST -->
 				<section class="product-list">
-
+					<h2>Список товаров</h2>
 					<!-- product item 1 -->
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -265,6 +265,7 @@
 							<div class="container">
 								<h2>Пара слов о перфораторах</h2>
 								<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+							</div>
 							</section>
 						</div>
 					</div>
@@ -318,6 +319,7 @@
 
 				<!-- MODAL CARD -->
 				<section class="modal modal-card">
+					<h2>Оформление заказа</h2>
 					<span>Товар добавлен в корзину!</span>
 					<a class="btn-checkout" href="#">Оформить заказ</a>
 					<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
