--- a/index.html
+++ b/index.html
@@ -12,29 +12,23 @@
 	<!-- HEADER -->
 	<header class="main-header">
 		<!-- top menu -->
-		<div class="main-header-top">
-			<div class="header-top-wrapper">
-				<div class="container header-top-row">
-					<a class="header-logo-link">
-						<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
-					</a>
-					<div class="search">
-						<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
-							<input class="search-input" type="search" id="site-search" name="search">
-							<label class="search-label" for="site-search">Поиск:</label>
-							<button class="search-btn" type="submit" aria-label="Поиск по сайту">
-								<svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
-							</button>
-						</form>
-					</div>
-					<div class="bookmark">
-						<a class="bookmark-link" href="#">Закладки: 0</a>
-					</div>
-					<div class="basket">
-						<a class="basket-link" href="#">Корзина: 0</a>
-					</div>
-					<a class="btn btn-order" href="#">Оформить заказ</a>
+		<div class="header-top-wrapper">
+			<div class="container header-top-row">
+				<a class="header-logo-link">
+					<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
+				</a>
+				<div class="search">
+					<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+						<label class="visually-hidden" for="site-search">Поиск:</label>
+						<input class="search-input" type="search" id="site-search" name="search" placeholder="Поиск:">
+						<button class="search-btn" type="submit" aria-label="Поиск по сайту">
+							<svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+						</button>
+					</form>
 				</div>
+					<a class="bookmark-link" href="#">Закладки: 0</a>
+					<a class="basket-link" href="#">Корзина: 0</a>
+				<a class="btn btn-order" href="#">Оформить заказ</a>
 			</div>
 		</div>
 			<!-- main navigation -->
@@ -44,8 +38,8 @@
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 					<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
-				<a class="user-link" href="#">Вход</a>
-				<a class="user-link" href="#">Регистрация</a>
+					<a class="user-link" href="#">Вход</a>
+					<a class="user-link registration-link" href="#">Регистрация</a>
 			</div>
 			<div class="container">
 				<nav class="main-navigation">
