--- a/inner.html
+++ b/inner.html
@@ -245,7 +245,7 @@
 				</section>
 				<!--pagination list -->
 				<ul class="pagination-list">
-					<li class="pagination-item pagination-item-current"><a class="pagination-link" href="#">1</a></li>
+					<li class="pagination-item pagination-item-current"><a class="pagination-link pagination-link-current" href="#">1</a></li>
 					<li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
 					<li class="pagination-item"><a class="pagination-link" href="#">3</a></li>
 					<li class="pagination-item"><a class="pagination-link" href="#">Следующая</a></li>
