--- a/inner.html
+++ b/inner.html
@@ -13,24 +13,24 @@
 	<header class="main-header">
 		<!-- top menu -->
 			<div class="header-top-wrapper">
-				<div class="container header-top-row">
-					<a class="header-logo-link">
-						<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
-					</a>
-					<div class="search">
-						<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
-							<label class="visually-hidden" for="site-search">Поиск:</label>
-							<input class="search-input" type="search" id="site-search" name="search" placeholder="Поиск:" aria-label="Поиск по сайту">
-							<button class="search-btn" type="submit" aria-label="Поиск по сайту">
-								<svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
-							</button>
-						</form>
-					</div>
-						<a class="bookmark-link" href="#">Закладки: 0</a>
-						<a class="basket-link basket-full" href="#">Корзина: 10</a>
-					<a class="btn btn-order" href="#">Оформить заказ</a>
+			<div class="container header-top-row">
+				<a class="header-logo-link">
+					<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
+				</a>
+				<div class="search">
+					<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+						<label class="visually-hidden" for="site-search">Поиск:</label>
+						<input class="search-input" type="search" id="site-search" name="search" placeholder="Поиск:">
+						<button class="search-btn" type="submit" aria-label="Поиск по сайту">
+							<svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+						</button>
+					</form>
 				</div>
+					<a class="bookmark-link" href="#">Закладки: 0</a>
+					<a class="basket-link basket-full" href="#">Корзина: 10</a>
+				<a class="btn btn-order" href="#">Оформить заказ</a>
 			</div>
+		</div>
 		<!-- main navigation -->
 		<div class="container user-navigation-row">
 			<h1 class="page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -38,9 +38,11 @@
 				<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
-			<a class="person-link" href="#">Равшан Джамшутович</a>
-			<a class="order-link" href="#">Мои заказы</a>
-			<a class="parlour-link" href="#">Личный кабинет</a>
+			<div class="person-container">
+			    <a class="person-link" href="#">Равшан Джамшутович</a>
+			    <a class="order-link" href="#">Мои заказы</a>
+			    <a class="parlour-link" href="#">Личный кабинет</a>
+		    </div>
 		</div>
 		<div class="container">
 			<nav class="main-navigation">
