--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<section class="popular-products">
 				<div class="container">
 				<div class="">
-					<h2>Популярные товары:</h2>
+					<h2 class="popular-product-title">Популярные товары:</h2>
 					<a class="btn popular-products-btn" href="#">Все популярные товары</a>
 				</div>
 				<!-- product item 1 -->
@@ -165,10 +165,8 @@
 			<!-- BRANDS -->
 			<section class="brands">
 				<div class="container">
-				<div class="brands-title">
-					<h2>Популярные производители:</h2>
+					<h2 class="brands-title">Популярные производители:</h2>
 					<a class="btn brands-btn" href="#">Все производители</a>
-				</div>
 				<!-- brands-list -->
 				<ul class="brands-list">
 					<li class="brands-bosch">
@@ -283,7 +281,7 @@
 					<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
 				</p>
 				<p class="designed-by">Разработано -
-					<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
+					<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
 				</p>
 			</div>
 		</div>
